# SurfaceGuard-Multimodal-3D-Defect-Mapping-Repair-Planning

./: README.md
src/surface_guard_bringup/: CMakeLists.txt  package.xml
src/surface_guard_bringup/launch/: system.launch.py
src/surface_guard_bringup/rviz/: debug_view.rviz
src/surface_guard_interfaces/: CMakeLists.txt  package.xml
src/surface_guard_interfaces/msg/: Defect.msg  DefectArray.msg
src/surface_guard_perception/: CMakeLists.txt  package.xml
src/surface_guard_perception/config/: perception_params.yaml
src/surface_guard_perception/include/surface_guard_perception/: wall_processor.hpp
src/surface_guard_perception/scripts/: crack_detector_node.py
src/surface_guard_perception/src/: wall_processor_node.cpp
